# Nova-School-Server

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Information.html  README.md  SECURITY.md  codedump.py  pyproject.toml  requirements.txt  run_tests.ps1  run_tests.sh  start_server.ps1  start_server.sh  start_worker.ps1  start_worker.sh
.github/: CODEOWNERS  dependabot.yml  labeler.yml  labels.json  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  pull-request-labeler.yml  release-assets.yml  sync-labels.yml
docs/: release-process.md  roadmap.md
docs/nova_school/: 01_Ueberblick_und_Rollenmodell.md  02_Benutzer_Gruppen_und_Rechte.md  03_Projekte_Workspaces_und_Profile.md  04_Editor_Notebooks_und_Live_Terminal.md  05_Offline_Referenzbibliothek_KI_und_Mentor.md  06_Chat_Peer_Review_und_Audit.md  07_Runner_Container_Netzwerk_und_Sicherheit.md  08_Distributed_Playground_und_Deployments.md  09_Betrieb_Backup_und_Troubleshooting.md
nova_school_server/: __main__.py  auth.py  code_runner.py  codedump_tools.py  collaboration.py  config.py  container_seccomp.py  curriculum.py  curriculum_catalog.py  curriculum_certificate_pdf.py  database.py  deployments.py  distributed.py  distribution_builder.py  docs_catalog.py  lms_client.py  mentor.py  nova_bridge.py  nova_product_docs.py  permissions.py  project_files.py  pty_host.py  realtime.py  reference_import_cpp.py  reference_import_web.py  reference_library.py  release_notes.py  reviews.py  seed.py  server.py  templates.py  user_admin.py  wiki_manual.py  worker_agent.py  worker_dispatch.py  workspace.py
nova_school_server/seccomp_profiles/: container-denylist.json
nova_school_server/static/: app.css  app.js  index.html  manual.css  reference.css  reference.js
nova_school_server/tests/: test_code_runner.py  test_codedump_tools.py  test_config.py  test_container_seccomp.py  test_curriculum.py  test_distribution_builder.py  test_docs.py  (+14 more)
(+15 files in other folders)
