[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nova-school-server"
version = "0.1.0"
description = "Browser-based school coding server with controlled execution, offline documentation, curriculum modules, and classroom administration."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
nova-school-server = "nova_school_server.__main__:main"
nova-school-import-cppreference = "nova_school_server.reference_import_cpp:main"
nova-school-import-web-reference = "nova_school_server.reference_import_web:main"
nova-school-build-product-docs = "nova_school_server.nova_product_docs:main"
nova-school-build-distribution = "nova_school_server.distribution_builder:main"
nova-school-build-release-notes = "nova_school_server.release_notes:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["nova_school_server*"]

[tool.setuptools.package-data]
nova_school_server = ["static/*"]
